--- a/demos_ch6/p-values.ipynb
+++ b/demos_ch6/p-values.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "The above gets us a single p-value. To get the distribution of p-values we repeat the above `n_experiments` times.\n",
     "\n",
-    "We want to consider, initially, what happens as we vary $\\sigma_{post}$ to the distribution of the p-values."
+    "We want to consider, initially, what happens as we vary $\\sigma_{post}$ (the variance of the posterior of the mean) to the distribution of the p-values."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that as we increase the variance in the posterior the p-value of tends to be increasingly centered at 0.5 with very small variance.\n",
+    "We see that as we increase the variance in the posterior the p-value tends to be increasingly centered at 0.5 with very small variance.\n",
     "\n",
     "To understand why this is, it's helpful to plot some corresponding $y_{rep}$ datasets and the distribution of the test statistics for a single experiment. The rows of the plots correspond to 4 \"regimes\":\n",
     "\n",
