--- a/demos_ch6/p-values.ipynb
+++ b/demos_ch6/p-values.ipynb
@@ -154,7 +154,10 @@
     "    ax.hist(p_values_scales[i], bins=15)\n",
     "    ax.set_title(f\"Scale: {scales[i]}\")\n",
     "    ax.vlines(0.5, 0, 100, color=\"red\")\n",
-    "plt.suptitle(\"Distribution of p-values as we vary the posterior variance of the mean\", y=1.025);"
+    "plt.suptitle(\n",
+    "    \"Distribution of p-values as we vary the posterior variance of the mean\",\n",
+    "    y=1.025,\n",
+    ");"
    ]
   },
   {
