Add note on sampling distribution

--- a/demos_ch6/p-values.ipynb
+++ b/demos_ch6/p-values.ipynb
@@ -173,9 +173,12 @@
     "2. **Posterior centered at the true value with high variance:** here the replicate datasets we produce are all over the shop. This roughly has the effect of making half the test statistics smaller than the actual min of $y$ and the other half larger and so the p-value is centered around 0.5 (as we saw above). Under such high posterior variance many very different datasets look plausible.\n",
     "3. **Posterior centered at a different (biased) value with low variance:** extreme (bad) p-value. All the datasets generated are similar, and not reflective of the real dataset $y$.\n",
     "4. **Posterior centered at a different (biased) value with high variance:** depending on the interplay between the bias and amount of variance in the posterior mean we may get extreme (or not) p-values.\n",
+    "\n",
     "**Lesson:** BDA3 says p-values around 0.5 are desirable (or rather, not extreme ones are) but clearly this is conditional on having sufficiently low posterior variance as when posterior variance increases, the distribution of the p-value centres around 0.5.\n",
     "\n",
-    "Put another way, getting an extreme p-value (close to 0 or 1) when the posterior variance is small is unlikely and tends to uniform as the posterior variance goes to 0 (if the estimator isn't biased). Getting an extreme p-value is much more likely if the variance is small and the posterior value is biased. Note also that in reality getting an extreme p-value is usually because the model is misspecified in some way and choosing different test statistics to analyse can highlight these deficiencies."
+    "Put another way, getting an extreme p-value (close to 0 or 1) when the posterior variance is small is unlikely and tends to uniform as the posterior variance goes to 0 (if the estimator isn't biased). Getting an extreme p-value is much more likely if the variance is small and the posterior value is biased. \n",
+    "\n",
+    "It's also worth noting that in reality getting an extreme p-value is usually because the model is misspecified in some way (e.g. by using a normal distribution for the likelihood when the data is actually heavy-tailed or skewed) and choosing a range of test statistics to analyse the generated data can highlight these deficiencies."
    ]
   },
   {
