--- a/demos_ch6/smoking-example.ipynb
+++ b/demos_ch6/smoking-example.ipynb
@@ -27,7 +27,7 @@
     "        return False\n",
     "    try:\n",
     "        first_idx = np.argwhere(arr == 1)[0][0]\n",
-    "        return np.mean(arr[first_idx:len(arr)]) == 1\n",
+    "        return np.mean(arr[first_idx : len(arr)]) == 1\n",
     "    except IndexError as ex:\n",
     "        return False"
    ]
@@ -38,11 +38,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_incident_smokers_test_statistic(params, df_y_rep, is_incident_smoker):\n",
+    "def calculate_incident_smokers_test_statistic(\n",
+    "    params, df_y_rep, is_incident_smoker\n",
+    "):\n",
     "    ts = []\n",
     "    for i in range(params[\"y_pred\"].shape[0]):\n",
-    "        tmp_df = pd.DataFrame({\"smkreg\": params[\"y_pred\"][i], \"newid\": df_y_rep[\"newid\"]})\n",
-    "        ts.append(np.mean(tmp_df.groupby(\"newid\")[\"smkreg\"].agg(is_incident_smoker)))\n",
+    "        tmp_df = pd.DataFrame(\n",
+    "            {\"smkreg\": params[\"y_pred\"][i], \"newid\": df_y_rep[\"newid\"]}\n",
+    "        )\n",
+    "        ts.append(\n",
+    "            np.mean(tmp_df.groupby(\"newid\")[\"smkreg\"].agg(is_incident_smoker))\n",
+    "        )\n",
     "    return ts"
    ]
   },
@@ -61,12 +67,20 @@
    "source": [
     "smoking_data = pd.read_table(\"../utilities_and_data/smoking/smoke_pub.dat\")\n",
     "num_people = smoking_data[\"newid\"].nunique()\n",
-    "smoking_data[\"mean_waves_smoked\"] = smoking_data.groupby(\"newid\")[\"smkreg\"].transform(\"mean\")\n",
+    "smoking_data[\"mean_waves_smoked\"] = smoking_data.groupby(\"newid\")[\n",
+    "    \"smkreg\"\n",
+    "].transform(\"mean\")\n",
     "\n",
-    "never_smokers_test_statistic_y = (smoking_data.groupby(\"newid\")[\"smkreg\"].agg(\"mean\") == 0).mean()\n",
-    "always_smokers_test_statistic_y = (smoking_data.groupby(\"newid\")[\"smkreg\"].agg(\"mean\") == 1).mean()\n",
+    "never_smokers_test_statistic_y = (\n",
+    "    smoking_data.groupby(\"newid\")[\"smkreg\"].agg(\"mean\") == 0\n",
+    ").mean()\n",
+    "always_smokers_test_statistic_y = (\n",
+    "    smoking_data.groupby(\"newid\")[\"smkreg\"].agg(\"mean\") == 1\n",
+    ").mean()\n",
     "\n",
-    "incident_smokers_test_statistic_y = np.mean(smoking_data.groupby(\"newid\")[\"smkreg\"].agg(is_incident_smoker))"
+    "incident_smokers_test_statistic_y = np.mean(\n",
+    "    smoking_data.groupby(\"newid\")[\"smkreg\"].agg(is_incident_smoker)\n",
+    ")"
    ]
   },
   {
@@ -89,9 +103,19 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "ax.plot(smoking_data.loc[smoking_data[\"sex(1=F)\"] == 1].groupby(\"wave\")[\"smkreg\"].mean(), label=\"girls\");\n",
-    "ax.plot(smoking_data.loc[smoking_data[\"sex(1=F)\"] == 0].groupby(\"wave\")[\"smkreg\"].mean(), label=\"boys\");\n",
-    "ax.set_ylim(0, 0.2);\n",
+    "ax.plot(\n",
+    "    smoking_data.loc[smoking_data[\"sex(1=F)\"] == 1]\n",
+    "    .groupby(\"wave\")[\"smkreg\"]\n",
+    "    .mean(),\n",
+    "    label=\"girls\",\n",
+    ")\n",
+    "ax.plot(\n",
+    "    smoking_data.loc[smoking_data[\"sex(1=F)\"] == 0]\n",
+    "    .groupby(\"wave\")[\"smkreg\"]\n",
+    "    .mean(),\n",
+    "    label=\"boys\",\n",
+    ")\n",
+    "ax.set_ylim(0, 0.2)\n",
     "ax.legend();"
    ]
   },
@@ -134,7 +158,7 @@
     "    \"female\": smoking_data[\"sex(1=F)\"],\n",
     "    \"t\": smoking_data[\"wave\"],\n",
     "    \"smoke\": smoking_data[\"smkreg\"],\n",
-    "    \"p_idx\": smoking_data[\"newid\"]\n",
+    "    \"p_idx\": smoking_data[\"newid\"],\n",
     "}"
    ]
   },
@@ -163,7 +187,7 @@
    "outputs": [],
    "source": [
     "params = fit.extract(permuted=True)\n",
-    "var_names=[\"b0\", \"b1\", \"b2\", \"b3\", \"b4\", \"sigma_alpha\"]"
+    "var_names = [\"b0\", \"b1\", \"b2\", \"b3\", \"b4\", \"sigma_alpha\"]"
    ]
   },
   {
@@ -236,7 +260,9 @@
     "always_smokers_test_statistic = (df_y_rep_mean_per_person == 1).mean(0)\n",
     "always_smokers_quantiles = np.quantile(always_smokers_test_statistic, q=qs)\n",
     "\n",
-    "incident_smokers_test_statistic = calculate_incident_smokers_test_statistic(params, df_y_rep, is_incident_smoker)\n",
+    "incident_smokers_test_statistic = calculate_incident_smokers_test_statistic(\n",
+    "    params, df_y_rep, is_incident_smoker\n",
+    ")\n",
     "incident_smokers_quantiles = np.quantile(incident_smokers_test_statistic, q=qs)"
    ]
   },
@@ -246,9 +272,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "never_smokers_p_value = np.mean(never_smokers_test_statistic > never_smokers_test_statistic_y)\n",
-    "always_smokers_p_value = np.mean(always_smokers_test_statistic > always_smokers_test_statistic_y)\n",
-    "incident_smokers_p_value = np.mean(incident_smokers_test_statistic > incident_smokers_test_statistic_y)"
+    "never_smokers_p_value = np.mean(\n",
+    "    never_smokers_test_statistic > never_smokers_test_statistic_y\n",
+    ")\n",
+    "always_smokers_p_value = np.mean(\n",
+    "    always_smokers_test_statistic > always_smokers_test_statistic_y\n",
+    ")\n",
+    "incident_smokers_p_value = np.mean(\n",
+    "    incident_smokers_test_statistic > incident_smokers_test_statistic_y\n",
+    ")"
    ]
   },
   {
@@ -275,23 +307,67 @@
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(18, 6), sharey=True)\n",
     "\n",
-    "ax[0].hist(never_smokers_test_statistic, bins=bins, color=\"#fa7268\");\n",
-    "ax[0].vlines(never_smokers_quantiles[0], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[0].vlines(never_smokers_quantiles[1], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[0].vlines(never_smokers_test_statistic_y, 0, vline_height, linestyle=\"--\", label=\"$T(y)$\");\n",
-    "ax[0].set_title(f\"p-value: {never_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{never_smokers_quantiles[0]*100:.1f}, {never_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {never_smokers_test_statistic_y*100:.1f}\");\n",
+    "ax[0].hist(never_smokers_test_statistic, bins=bins, color=\"#fa7268\")\n",
+    "ax[0].vlines(\n",
+    "    never_smokers_quantiles[0], 0, vline_height, linestyle=\"--\", color=\"grey\"\n",
+    ")\n",
+    "ax[0].vlines(\n",
+    "    never_smokers_quantiles[1], 0, vline_height, linestyle=\"--\", color=\"grey\"\n",
+    ")\n",
+    "ax[0].vlines(\n",
+    "    never_smokers_test_statistic_y,\n",
+    "    0,\n",
+    "    vline_height,\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"$T(y)$\",\n",
+    ")\n",
+    "ax[0].set_title(\n",
+    "    f\"p-value: {never_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{never_smokers_quantiles[0]*100:.1f}, {never_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {never_smokers_test_statistic_y*100:.1f}\"\n",
+    ")\n",
     "\n",
-    "ax[1].hist(always_smokers_test_statistic, bins=bins, color=\"#fa7268\");\n",
-    "ax[1].vlines(always_smokers_quantiles[0], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[1].vlines(always_smokers_quantiles[1], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[1].vlines(always_smokers_test_statistic_y, 0, vline_height, linestyle=\"--\", label=\"$T(y)$\");\n",
-    "ax[1].set_title(f\"p-value: {always_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{always_smokers_quantiles[0]*100:.1f}, {always_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {always_smokers_test_statistic_y*100:.1f}\");\n",
+    "ax[1].hist(always_smokers_test_statistic, bins=bins, color=\"#fa7268\")\n",
+    "ax[1].vlines(\n",
+    "    always_smokers_quantiles[0], 0, vline_height, linestyle=\"--\", color=\"grey\"\n",
+    ")\n",
+    "ax[1].vlines(\n",
+    "    always_smokers_quantiles[1], 0, vline_height, linestyle=\"--\", color=\"grey\"\n",
+    ")\n",
+    "ax[1].vlines(\n",
+    "    always_smokers_test_statistic_y,\n",
+    "    0,\n",
+    "    vline_height,\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"$T(y)$\",\n",
+    ")\n",
+    "ax[1].set_title(\n",
+    "    f\"p-value: {always_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{always_smokers_quantiles[0]*100:.1f}, {always_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {always_smokers_test_statistic_y*100:.1f}\"\n",
+    ")\n",
     "\n",
-    "ax[2].hist(incident_smokers_test_statistic, bins=bins, color=\"#fa7268\");\n",
-    "ax[2].vlines(incident_smokers_quantiles[0], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[2].vlines(incident_smokers_quantiles[1], 0, vline_height, linestyle=\"--\", color=\"grey\");\n",
-    "ax[2].vlines(incident_smokers_test_statistic_y, 0, vline_height, linestyle=\"--\", label=\"$T(y)$\");\n",
-    "ax[2].set_title(f\"p-value: {incident_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{incident_smokers_quantiles[0]*100:.1f}, {incident_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {incident_smokers_test_statistic_y*100:.1f}\");\n",
+    "ax[2].hist(incident_smokers_test_statistic, bins=bins, color=\"#fa7268\")\n",
+    "ax[2].vlines(\n",
+    "    incident_smokers_quantiles[0],\n",
+    "    0,\n",
+    "    vline_height,\n",
+    "    linestyle=\"--\",\n",
+    "    color=\"grey\",\n",
+    ")\n",
+    "ax[2].vlines(\n",
+    "    incident_smokers_quantiles[1],\n",
+    "    0,\n",
+    "    vline_height,\n",
+    "    linestyle=\"--\",\n",
+    "    color=\"grey\",\n",
+    ")\n",
+    "ax[2].vlines(\n",
+    "    incident_smokers_test_statistic_y,\n",
+    "    0,\n",
+    "    vline_height,\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"$T(y)$\",\n",
+    ")\n",
+    "ax[2].set_title(\n",
+    "    f\"p-value: {incident_smokers_p_value:.3f} \\n Test statistic y_rep 95% int: [{incident_smokers_quantiles[0]*100:.1f}, {incident_smokers_quantiles[1]*100:.1f}] \\n Test statistic y: {incident_smokers_test_statistic_y*100:.1f}\"\n",
+    ")\n",
     "\n",
     "plt.suptitle(\"BDA3 Table 6.1 - Model 1\", y=1.05, fontsize=16);"
    ]
