--- a/demos_ch8/censored_data.ipynb
+++ b/demos_ch8/censored_data.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "plt.hist(y, bins=25);\n",
+    "plt.hist(y, bins=25)\n",
     "plt.vlines(upper_limit, 0, 50, color=\"red\");"
    ]
   },
@@ -85,7 +85,7 @@
     "    \"N_obs\": int(N_obs),\n",
     "    \"N_cens\": int(N_cens),\n",
     "    \"y_obs\": y[~censored],\n",
-    "    \"U\": upper_limit\n",
+    "    \"U\": upper_limit,\n",
     "}"
    ]
   },
@@ -120,7 +120,12 @@
     }
    ],
    "source": [
-    "fit = model.sample(data=stan_data, output_dir=output_dir, iter_warmup=1000, iter_sampling=1_000)"
+    "fit = model.sample(\n",
+    "    data=stan_data,\n",
+    "    output_dir=output_dir,\n",
+    "    iter_warmup=1000,\n",
+    "    iter_sampling=1_000,\n",
+    ")"
    ]
   },
   {
@@ -149,7 +154,9 @@
    "source": [
     "arviz_inf = arviz.convert_to_inference_data(fit)\n",
     "summary_df = (\n",
-    "    arviz.summary(arviz_inf).reset_index().rename(columns={\"index\": \"parameter\"})\n",
+    "    arviz.summary(arviz_inf)\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"index\": \"parameter\"})\n",
     ")"
    ]
   },
