--- a/demos_ch8/censored_data.ipynb
+++ b/demos_ch8/censored_data.ipynb
@@ -11,8 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from cmdstanpy import CmdStanModel\n",
-    "from cmdstanpy import set_cmdstan_path\n",
+    "from cmdstanpy import CmdStanModel, set_cmdstan_path\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
